--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -19,4 +19,11 @@ body {
     padding-bottom: 6rem;
     min-height: 100%;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
+}
+
+body,
+html {
+    height: 100%;
+    background-color: #16a085;
 }
