--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -1,9 +1,9 @@
 .rsd {
     &-footer {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        left: 0;
+        // position: absolute;
+        // right: 0;
+        // bottom: 0;
+        // left: 0;
         padding: 5rem 0;
         font-size: .5em;
     }
@@ -22,7 +22,7 @@
         -ms-flex-pack: center;
         justify-content: center;
         list-style: none;
-        margin: 0;
+        margin: 0 0 3.125rem 0;
         padding: 0;
         height: auto;
         width: auto;
