--- a/assets/css/scss/_nav.scss
+++ b/assets/css/scss/_nav.scss
@@ -1,22 +1,10 @@
 @import "https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css";
 
-@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css";
-
 @import "https://daneden.github.io/animate.css/animate.min.css";
 
 /*-------------------------------*/
 /*           VARIABLES           */
 /*-------------------------------*/
-body {
-    position: relative;
-    overflow-x: hidden;
-}
-
-body,
-html {
-    height: 100%;
-    background-color: #583e7e;
-}
 
 .nav .open > a {
     background-color: transparent;
@@ -115,35 +103,35 @@ html {
 }
 
 .sidebar-nav li:nth-child(2):before {
-    background-color: #402d5c;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(3):before {
-    background-color: #4c366d;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(4):before {
-    background-color: #583e7e;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(5):before {
-    background-color: #64468f;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(6):before {
-    background-color: #704fa0;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(7):before {
-    background-color: #7c5aae;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(8):before {
-    background-color: #8a6cb6;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:nth-child(9):before {
-    background-color: #987dbf;
+    background-color: #16a085;
 }
 
 .sidebar-nav li:hover:before {
@@ -336,11 +324,6 @@ html {
 }
 
 /* SOME DEMO STYLES - NOT REQUIRED */
-body,
-html {
-    background-color: #583e7e;
-}
-
 body h1,
 body h2,
 body h3,
