--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -3,7 +3,6 @@
 */
 
 html {
-    height: 100%;
     box-sizing: border-box;
 }
 
@@ -15,9 +14,9 @@ html {
 
 body {
     position: relative;
-    margin: 0;
-    padding-bottom: 6rem;
-    min-height: 100%;
+
+    // padding-bottom: 6rem;
+    // min-height: 100%;
     font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
 }
