--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -1,11 +1,8 @@
 .rsd {
     &-footer {
-        // position: absolute;
-        // right: 0;
-        // bottom: 0;
-        // left: 0;
         padding: 5rem 0;
         font-size: .5em;
+        height: 250px;
     }
 
     &-social {
