--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -1,8 +1,30 @@
 .rsd {
     &-footer {
-        padding: 5rem 0;
+        padding: 1rem 0;
         font-size: .5em;
-        height: 250px;
+        height: 100px;
+
+        @media (max-width: 768px) {
+            > div:first-child,
+            div:nth-child(2) {
+                padding-top: 1rem;
+            }
+
+            div:nth-child(2) {
+                text-align: center;
+            }
+        }
+
+        @media (min-width: 768px) {
+            > div:first-child,
+            div:nth-child(2) {
+                line-height: 7rem;
+            }
+
+            div:nth-child(2) {
+                text-align: right;
+            }
+        }
     }
 
     &-social {
@@ -19,7 +41,7 @@
         -ms-flex-pack: center;
         justify-content: center;
         list-style: none;
-        margin: 0 0 3.125rem 0;
+        margin: 0;
         padding: 0;
         height: auto;
         width: auto;
@@ -37,21 +59,9 @@
         }
 
         i {
-            height: 4rem;
-            width: 4rem;
             font-size: 1.5rem;
-            line-height: 4.3rem;
-            background: $rsd-dark-grey;
-            border-radius: 100%;
             color: $rsd-light-grey;
             margin-right: 1rem;
-            margin-bottom: 10px !important;
-            padding-bottom: 10px !important;
-
-            &:hover,
-            &:focus {
-                background: #6d8785;
-            }
         }
     }
 }
