--- a/assets/css/scss/_helpers.scss
+++ b/assets/css/scss/_helpers.scss
@@ -17,3 +17,11 @@
 .text-light-grey {
     color: $rsd-light-grey;
 }
+
+/*-------------------------------*/
+/*     SPACING                   */
+/*-------------------------------*/
+
+.inline-block {
+    display: inline-block;
+}
