--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -14,10 +14,10 @@ html {
 
 body {
     position: relative;
-
-    // padding-bottom: 6rem;
-    // min-height: 100%;
+    font-size: .9rem;
     font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1.2px;
+    line-height: 1.2rem;
     overflow-x: hidden;
 }
 
@@ -25,4 +25,8 @@ body,
 html {
     height: 100%;
     background-color: #16a085;
+}
+
+h5 {
+    font-size: 1.4rem;
 }
