--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -5,7 +5,8 @@
 @import "normalize";
 @import "reset";
 @import "base";
-@import "nav";
 @import "colours";
 @import "helpers";
+@import "nav";
+@import "header";
 @import "footer";
