[TASK#14] - Adding configurable header text

--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -109,6 +109,10 @@
     }
 }
 
+/*-------------------------------*/
+/*     MEDIA QUERIES             */
+/*-------------------------------*/
+
 @media (min-width: 992px) {
     div.addressinfo-item:nth-child(odd) {
         display: inline-block;
