--- a/assets/css/scss/_helpers.scss
+++ b/assets/css/scss/_helpers.scss
@@ -10,6 +10,10 @@
     background: $rsd-light-black;
 }
 
+.bg-blue {
+    background: $rsd-blue;
+}
+
 /*-------------------------------*/
 /*     FONT COLOURS              */
 /*-------------------------------*/
