--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -26,6 +26,32 @@ html {
     height: 100%;
 }
 
+h1 {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+    line-height: 2rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+    line-height: 1.75rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+}
+
 h5 {
-    font-size: 1.4rem;
+    font-size: 1.25rem;
+    line-height: 1.25rem;
+}
+
+h6 {
+    font-size: 1rem;
+    line-height: 1rem;
 }
