--- a/assets/css/scss/_header.scss
+++ b/assets/css/scss/_header.scss
@@ -1,11 +1,23 @@
 header {
-    background: $rsd-black;
-
     &#home {
         img {
             width: 100vw;
             height: 100vh;
             object-fit: cover;
+        }
+
+        .header-img:after {
+            background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgb(0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%) repeat scroll 0 0;
+            background: rgba(0, 0, 0, 0) -moz-linear-gradient(top left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%) repeat scroll 0 0;
+            background: rgba(0, 0, 0, 0) -o-linear-gradient(top left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%) repeat scroll 0 0;
+            background: rgba(0, 0, 0, 0) linear-gradient(to bottom right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%) repeat scroll 0 0;
+            content: "";
+            display: block;
+            height: 100vh;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
         }
     }
 
@@ -16,16 +28,47 @@ header {
     }
 
     .header-img:after {
-        background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgb(0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
-        background: rgba(0, 0, 0, 0) -moz-linear-gradient(top left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
-        background: rgba(0, 0, 0, 0) -o-linear-gradient(top left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
-        background: rgba(0, 0, 0, 0) linear-gradient(to bottom right, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
+        background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgb(0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
+        background: rgba(0, 0, 0, 0) -moz-linear-gradient(top left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
+        background: rgba(0, 0, 0, 0) -o-linear-gradient(top left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 100%) repeat scroll 0 0;
         content: "";
         display: block;
-        height: 100%;
+        height: 80vh;
         left: 0;
         position: absolute;
         top: 0;
         width: 100%;
+    }
+
+    .header__divider {
+        border-bottom: 2px solid $rsd-white;
+        margin-top: 2rem;
+        margin-bottom: 1.2rem;
+    }
+
+    .header-text {
+        width: 100%;
+        position: absolute;
+        top: 15rem;
+
+        h1 {
+            font-weight: bold;
+        }
+
+        &.container {
+            padding-left: 3rem;
+            padding-right: 3rem;
+        }
+    }
+}
+
+/*-------------------------------*/
+/*     MEDIA QUERIES             */
+/*-------------------------------*/
+
+@media (min-width: 768px) {
+    h4 {
+        font-size: 3rem;
     }
 }
