--- a/assets/css/scss/_nav.scss
+++ b/assets/css/scss/_nav.scss
@@ -63,7 +63,6 @@
 
 #page-content-wrapper {
     min-height: 100%;
-    margin-bottom: 100px;
 }
 
 /*-------------------------------*/
@@ -103,35 +102,35 @@
 }
 
 .sidebar-nav li:nth-child(2):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(3):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(4):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(5):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(6):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(7):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(8):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:nth-child(9):before {
-    background-color: #16a085;
+    background-color: #1e2753;
 }
 
 .sidebar-nav li:hover:before {
