[TASK#15] - Adding home page sections

--- a/assets/css/scss/_colours.scss
+++ b/assets/css/scss/_colours.scss
@@ -9,3 +9,5 @@ $rsd-dark-grey: #323232;
 $rsd-light-grey: #999999;
 $rsd-white: #fff;
 $rsd-blue: #1e2753;
+$rsd-green: #6dc484;
+$rsd-orange: #dd9440;
