[TASK#17] - Adding spacing top to contactus

--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -8,6 +8,8 @@
 
 .contactinfo,
 .addressinfo {
+    padding-top: 5rem;
+
     &__header {
         color: $rsd-white;
         padding-bottom: 2rem;
