[commit#3] - New header and nav

--- a/assets/css/scss/base/_base.scss
+++ b/assets/css/scss/base/_base.scss
@@ -1,5 +1,9 @@
+html,
 body {
-    background: tomato;
+    height: 100%;
+}
+
+body {
     color: #8f8f8f;
     font-family: 'Avenir Next LT Pro';
     font-weight: 300;
