--- a/assets/css/scss/base/_helpers.scss
+++ b/assets/css/scss/base/_helpers.scss
@@ -1,4 +1,4 @@
-/****** Layout ******/
+/* ==== layout  ==== */
 .row {
     width: 100%;
     max-width: 1024px;
@@ -7,6 +7,63 @@
     padding: 0 2%;
 }
 
-.content {
-    padding: 50px 2% 250px;
+/* ==== Type Size  ==== */
+
+.gigantic {
+    font-size: 11rem;
+}
+
+.supersize {
+    font-size: 8rem;
+}
+
+.tera {
+    font-size: 6.5rem; /* 117 / 18 = 6.5 */
+    margin-bottom: 0.25385rem;
+}
+
+.giga {
+    font-size: 5rem; /* 90 / 18 = 5 */
+    margin-bottom: 0.33rem;
+}
+
+.mega {
+    font-size: 4rem; /* 72 / 18 = 4 */
+    margin-bottom: 0.4125rem;
+}
+
+.alpha {
+    font-size: 3.33333rem; /* 60 / 18 = 3.3333 */
+    margin-bottom: 0.495rem;
+}
+
+.beta {
+    font-size: 2.6667rem; /* 48 / 18 = 2.6667 */
+    margin-bottom: 0.61875rem;
+}
+
+.gamma {
+    font-size: 2rem; /* 36 / 18 = 2 */
+    margin-bottom: 0.825rem;
+}
+
+.delta {
+    font-size: 1.3333333333333333rem; /* 24 / 18 = 1.3333 */
+    margin-bottom: 1.2375rem;
+}
+
+.epsilon {
+    font-size: 1.16667rem; /* 21 / 18 = 1.1667 */
+    margin-bottom: 1.41429rem;
+}
+
+.zeta {
+    font-size: 1rem; /* 18 = 18 × 1 */
+    margin-bottom: 1.65rem;
+}
+
+/* ==== Typefaces  ==== */
+
+.montserrat {
+    font-family: "Montserrat";
 }
