--- a/assets/css/scss/components/_header.scss
+++ b/assets/css/scss/components/_header.scss
@@ -3,7 +3,7 @@
     height: 30px;
     position: absolute;
     top: 20px;
-    right: 25px;
+    left: 25px;
     cursor: pointer;
 
     &.on {
@@ -26,7 +26,7 @@
 .three {
     width: 100%;
     height: 5px;
-    background: white;
+    background: black;
     margin: 6px auto;
     backface-visibility: hidden;
 
