--- a/assets/css/scss/components/_hero.scss
+++ b/assets/css/scss/components/_hero.scss
@@ -1,56 +1,31 @@
 .hero {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     position: relative;
-    background: url(http://www.philippefercha.com/cd/toggle-menu-bg.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    text-align: center;
-    color: #fff;
-    padding-top: 110px;
-    min-height: 500px;
-    letter-spacing: 2px;
-    font-family: "Montserrat", sans-serif;
+}
+
+.hero .alpha-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    opacity: 0.8;
 }
 
 .hero h1 {
-    font-size: 50px;
-    line-height: 1.3;
+    color: black;
+    font-weight: bold;
 }
 
-.hero h1 span {
-    font-size: 25px;
-    color: #e8f380;
-    border-bottom: 2px solid #e8f380;
-    padding-bottom: 12px;
-    line-height: 3;
+.wrapper {
+    max-width: 25rem;
+    position: relative;
+    z-index: 10;
+    transform: translateY(-50%);
+    top: 50%;
 }
 
-@-webkit-keyframes scroll {
-    0% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        transform: translateY(20px);
-    }
-}
-
-@keyframes scroll {
-    0% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translateY(20px);
-        -ms-transform: translateY(20px);
-        transform: translateY(20px);
-    }
+.color-emphasis {
+    color: #3043a0;
 }
