--- a/assets/css/scss/components/_header.scss
+++ b/assets/css/scss/components/_header.scss
@@ -26,7 +26,7 @@
 .three {
     width: 100%;
     height: 5px;
-    background: black;
+    background: #3043a0;
     margin: 6px auto;
     backface-visibility: hidden;
 
